[package]
name = "rscout"
version = "0.1.0"
edition = "2021"
description = "A comprehensive network discovery tool written in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "rscout"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
oui = "0.8"
eui48 = "1.1"
zeroconf = "0.15"
async-trait = "0.1"
comfy-table = "7.2"
surge-ping = "0.8"
regex = "1.10"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
